--- a/package.json
+++ b/package.json
@@ -19,8 +19,18 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "angular-imask": "^5.1.5",
+    "angular-in-memory-web-api": "^0.8.0",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
+    "currency-formatter": "^1.5.4",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "primeicons": "^1.0.0",
+    "primeng": "^7.1.3",
     "rxjs": "~6.3.3",
+    "toastr": "^2.1.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
