--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,10 @@
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/chart.js/dist/Chart.bundle.js",
-              "node_modules/jquery/dist/jquery.min.js"
+              "node_modules/popper.js/dist/popper.min.js",
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/chart.js/dist/Chart.bundle.js"
+             
             ],
             
             "es5BrowserSupport": true
