--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "primeicons": "^1.0.0",
     "primeng": "^7.1.3",
     "rxjs": "~6.3.3",
+    "save": "^2.4.0",
     "toastr": "^2.1.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
