--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "currency-formatter": "^1.5.4",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
+    "ng2-currency-mask": "^5.3.1",
     "popper.js": "^1.15.0",
     "primeicons": "^1.0.0",
     "primeng": "^7.1.3",
