--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@auth0/angular-jwt": "^2.1.1",
     "angular-imask": "^5.1.5",
     "angular-in-memory-web-api": "^0.8.0",
     "bootstrap": "^4.3.1",
